nav alignment issue fixed

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -362,6 +362,8 @@ header.bk-header {
 
 .widget .extendednavigation ul li {
     border-bottom:0;
+    float:none;
+    display: inline-block;
 }
 
 /* ===============================
@@ -410,7 +412,7 @@ footer.bk-footer {
     background-color: @color-swatch3;
     padding:3em 0;
     text-align:center;
-    border-top: 20px solid lighten(@color-swatch3,10%);
+    border-top: 10px solid lighten(@color-swatch3,10%);
     margin-top:40px;
 }
 
